--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   </head>
   <body>
     <main>
-      <!------- Header--------->
-      <header class="header">
+            <!------- Header--------->
+
+      <header class="fixed-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <img src="./assets/img/Logo.svg" alt="Besnik." />
+            <a href="">
+              <img src="./assets/img/Logo.svg" alt="Besnik.">
+            </a>
 
             <!-- Navigation -->
             <ul>
@@ -42,7 +45,11 @@
               <a href="#!" class="btn action-btn">Sign up</a>
             </div>
           </nav>
-
+        </div>
+      </header>
+      <!------- hero--------->
+      <div class="hero-wrap">
+        <div class="content">
           <div class="hero">
             <div class="info">
               <p class="sub-title">Welcome to Besnik Agency</p>
@@ -61,14 +68,16 @@
             />
           </div>
         </div>
-      </header>
+      </div>
 
       <!------- Clients-------->
       <div class="clients">
         <div class="content">
           <div class="row">
             <!-- Logo -->
-            <img src="./assets/img/Logo.svg" alt="Besnik" />
+            <a href="">
+              <img src="./assets/img/Logo.svg" alt="Besnik.">
+            </a>
 
             <!-- Stars -->
             <div class="stars">
@@ -526,7 +535,9 @@
           </div>
 
           <div class="row-bottom">
-            <img src="./assets/img/Logo.svg" alt="Besnik" class="logo" />
+            <a href="">
+              <img src="./assets/img/Logo.svg" alt="Besnik.">
+            </a>
             <p class="copyright">Copyright 2020.com, All rights reserved.</p>
           </div>
         </div>
