--- a/index.html
+++ b/index.html
@@ -19,24 +19,23 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <main>
+    <main id="home">
             <!------- Header--------->
-
-      <header class="fixed-header">
+      <header class="header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <a href="">
+            <a href="/">
               <img src="./assets/img/Logo.svg" alt="Besnik.">
             </a>
 
             <!-- Navigation -->
             <ul>
-              <li><a href="#!">Home</a></li>
-              <li><a href="#!">Features</a></li>
-              <li><a href="#!">Services</a></li>
-              <li><a href="#!">Resources</a></li>
-              <li><a href="#!">Contact</a></li>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#features">Features</a></li>
+              <li><a href="#resources">Resources</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
 
             <!-- Action -->
@@ -75,7 +74,7 @@
         <div class="content">
           <div class="row">
             <!-- Logo -->
-            <a href="">
+            <a href="#!">
               <img src="./assets/img/Logo.svg" alt="Besnik.">
             </a>
 
@@ -111,7 +110,7 @@
       </div>
 
       <!-------Guides---------->
-      <div class="guides">
+      <div id="services" class="guides">
         <div class="content">
           <h2 class="sub-title">How its works?</h2>
           <p class="desc">
@@ -163,7 +162,7 @@
       </div>
 
       <!------- Featured ------>
-      <div class="featured">
+      <div id="features" class="featured">
         <div class="content">
           <header>
             <h2 class="sub-title">Featured Properties</h2>
@@ -257,7 +256,7 @@
       </div>
 
       <!------- Stats ------>
-      <div class="stats">
+      <div id="resources" class="stats">
         <div class="content">
           <div class="row">
             <div class="img-block">
@@ -456,7 +455,7 @@
       </div>
 
       <!------- Footer ------>
-      <footer class="footer">
+      <footer id="contact" class="footer">
         <div class="content">
           <div class="row row-top">
             <!-- Product column -->
@@ -535,7 +534,7 @@
           </div>
 
           <div class="row-bottom">
-            <a href="">
+            <a href="/">
               <img src="./assets/img/Logo.svg" alt="Besnik.">
             </a>
             <p class="copyright">Copyright 2020.com, All rights reserved.</p>
