--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <main id="home">
-            <!------- Header--------->
-      <header class="header">
+           <!------- Header--------->
+      <header class="fixed-header">
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
