sửa logo k click

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="content">
           <nav class="navbar">
             <!-- Logo -->
-            <a href="/">
+            <a href="#!">
               <img src="./assets/img/Logo.svg" alt="Besnik.">
             </a>
 
@@ -534,7 +534,7 @@
           </div>
 
           <div class="row-bottom">
-            <a href="/">
+            <a href="#!">
               <img src="./assets/img/Logo.svg" alt="Besnik.">
             </a>
             <p class="copyright">Copyright 2020.com, All rights reserved.</p>
