--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
           <!-- Action -->
           <div class="action">
             <a href="#!" class="action-link">Sign in</a>
-            <a href="#!" class="btn action-btn">Sign up</a>
+            <a
+              href="https://ngoctien18.github.io/html-css-project-02/"
+              target="_blank"
+              class="btn action-btn"
+              >Sign up</a
+            >
           </div>
         </nav>
       </div>
